mcclellan dual modal abandoned

--- a/child_pages/cc-elections/Candidates/mcclellan.html
+++ b/child_pages/cc-elections/Candidates/mcclellan.html
@@ -270,7 +270,17 @@
 
              </div>
 
-             <button id="quick-summary-reopen" class="quick-sum">quick summary</button>
+             <!-- <button id="quick-summary-reopen" class="quick-sum">quick summary</button> -->
+             <details class="can-sec" id="quick-summary">
+                <summary style="color: blue;">
+                    <strong>Quick Summary</strong>
+                </summary>
+                Antwan McClellan is a New Jersey Assemblyman representing the 1st Legislative District since 2020 and currently serves as the Assembly Minority Deputy Leader. A lifelong 
+                resident of Ocean City, McClellan has held local office on the City Council and Board of Education. He also serves in the Cape May County Sheriff's Department and is active 
+                in community organizations like the Ocean City Historical Museum and South Jersey Field of Dreams. His legislative focus includes public safety, economic justice, ballot 
+                design reform, and support for tourism and the arts.
+            </details>
+
 
              <div class="election-date">
                  <p>This election is on November 4th, 2025</p>
@@ -295,7 +305,35 @@
         <a href="../../../child_pages/cc-elections/transparency_standards_page.html" target="_blank" rel="noopener noreferrer" class="website-link"><button class="candidate-ext-site">Transparency Standards Explained</button></a>                 
 
         <img class="gauge" src="../../../assets/gauge_okay.svg" alt="">
-        <button id="rating-exp" class="rating-exp">anecdotal rating explanation</button>
+        <!-- <button id="rating-exp" class="rating-exp">anecdotal rating explanation</button> -->
+
+        <details class="can-sec" id="transparency-accessibility">
+            <summary style="color: blue;">
+                <strong>Explanation</strong>
+            </summary>
+            Assemblymen Erik Simonsen and Antwan McClellan have historically been more accessible than many local candidates in Cumberland County, 
+                regularly attending Republican breakfasts and participating in public meet-and-greet events. That pattern already placed them 
+                above average compared to the regional status quo, where many candidates remain largely invisible between election cycles... or at least 
+                invisible to people who aren't already political insiders.
+                <br>
+                <br>
+                Since the end of the primary election, both have made plans to expand their outreach further heading into the general election season. While 
+                their joint radio interview scheduled for July 1 had to be adjusted—Erik ultimately needed to cancel—Antwan followed through and appeared 
+                live on air. Erik has indicated he will reschedule his radio interview in the near future, and both plan to participate in a longer, 
+                podcast-style interview later in the summer.
+                <br>
+                <br>
+                If these commitments materialize, they will be on track to provide a reasonable amount of information and public dialogue before October, 
+                when most voters begin to focus on the race in earnest.                 
+                <br>
+                <br>
+                Given the longstanding pattern of inaccessibility that plagues many campaigns related to Cumberland County, InformTheVoteNJ will continue 
+                monitoring closely to see whether these promised interviews and public appearances occur as planned.
+                <br>
+                <br>
+                For now, based on demonstrated efforts to improve communication this cycle, Simonsen and McClellan’s transparency and accessibility merit an 
+                updated rating of average to above average, with cautious optimism that further improvements will follow.
+        </details>
     </div> 
 
     <details>
