--- a/child_pages/cc-elections/Candidates/mcclellan.html
+++ b/child_pages/cc-elections/Candidates/mcclellan.html
@@ -361,35 +361,197 @@
      <div class="candidate-agenda">
 
             <h4 class="sub-heading">Agenda</h4>
-            <div class="experience can-sec">
+                <div class="experience can-sec">
                 <ul>
-                    <li><strong>Reduce Taxes, Government Spending & State Debt</strong><br>
-                        Committed to restoring fiscal sanity by cutting taxes and limiting government overreach.</li>
-                        <br>
-                    <li><strong>Oppose “Giveaways” to Illegal Immigrants</strong><br>
-                        Stand against using taxpayer resources to support undocumented individuals.</li>
-                        <br>
-                    <li><strong>Enhance South Jersey Infrastructure, Healthcare & Education</strong><br>
-                        Invest in foundational systems that benefit working families and communities.</li>
-                        <br>
-                    <li><strong>Promote Small Business Recovery and Growth</strong><br>
-                        Foster economic development by supporting locally owned businesses.</li>
-                        <br>
-                    <li><strong>Defend Law Enforcement and Public Safety</strong><br>
-                        Uphold policies that respect and strengthen police and emergency services.</li>
-                  </ul>
-                  <br>
-                  <br>
-                  <p>
-                    Assemblyman Antwan McClellan has sponsored a broad range of legislation focused on regional equity, small business growth, and infrastructure access—particularly for 
-                    South Jersey. His proposals include expanding loan access to broadband providers (A3050), eliminating tax exemption caps in Urban Enterprise Zones (A3059), and creating
-                    manufacturing-focused grants and marketing for southern counties (A3057, A3058). He has also supported healthcare measures like requiring mammogram coverage based on medical 
-                    need (A3053, “Michelle’s Law”) and trauma-informed training for child custody cases (A3062). On the accountability front, McClellan has advocated for timely crime data 
-                    reporting (A3063), restoring in-person state services (A3054), and ensuring all counties have access to MVC services (A3052). He has also worked on policy reforms around 
-                    property taxation (A3064, ACR95) and veterans' services (A3055, AJR212), while expressing concern over recent DEP environmental rulemaking (ACR150). Overall, his record 
-                    highlights a commitment to practical local governance, economic development in underserved regions, and improving access to state-level services.
-                  </p>
-            </div>
+                    <li>
+                    <details>
+                        <summary style="color: blue;"><strong>Pro–South Jersey Identity</strong></summary>
+                        <p>
+                        Assemblyman Antwan McClellan centers his agenda on protecting South Jersey’s distinct communities — 
+                        shore towns, bayshore, farm country, and small cities — and making sure Trenton stops treating LD1 as an afterthought. 
+                        He emphasizes returning resources to Cape May, Cumberland, and southern Atlantic, supporting tourism, agriculture, and local industry so 
+                        families can build their futures here rather than moving away. 
+                        </p>
+                    </details>
+                    </li>
+                    <br>
+
+                    <li>
+                    <details>
+                        <summary style="color: blue;"><strong>Strong Families, Safe Neighborhoods</strong></summary>
+                        <p>
+                        McClellan ties community stability to safe streets, parental voice in schools, and attainable housing. 
+                        He supports policies that lower the cost of living, protect seniors on fixed incomes, and keep neighborhoods safe through 
+                        effective policing and first-responder support. 
+                        </p>
+                    </details>
+                    </li>
+                    <br>
+
+                    <li>
+                    <details>
+                        <summary style="color: blue;"><strong>Economic Growth & Small Business</strong></summary>
+                        <p>
+                        From boardwalk enterprises to bayshore marinas and main-street shops, McClellan views small business as the backbone of LD1. 
+                        He advocates cutting red tape, resisting new fees and “sin-tax” hikes, and fostering year-round economic activity that complements 
+                        seasonal tourism. Workforce development and partnerships with community colleges are core to his vision of local opportunity. 
+                        </p>
+                    </details>
+                    </li>
+                    <br>
+
+                    <li>
+                    <details>
+                        <summary style="color: blue;"><strong>Fiscal Discipline in Trenton</strong></summary>
+                        <p>
+                        With New Jerseyans already facing some of the nation’s highest taxes, McClellan opposes what he calls executive overreach and 
+                        budget practices that rely on ever-higher taxes and fees (e.g., on cigarettes, alcohol, and gambling). 
+                        His agenda stresses balanced budgets, taxpayer value, and accountability for spending priorities. 
+                        </p>
+                    </details>
+                    </li>
+                    <br>
+
+                    <li>
+                    <details>
+                        <summary style="color: blue;"><strong>Infrastructure That Serves LD1</strong></summary>
+                        <p>
+                        He supports long-delayed regional upgrades — notably the Route 55 expansion for safety, evacuation, and commerce — 
+                        and consistent state attention to local roads, bridges, and ports. Infrastructure should reflect how South Jersey actually lives, 
+                        works, and evacuates during storms. 
+                        </p>
+                    </details>
+                    </li>
+                    <br>
+
+                    <li>
+                    <details>
+                        <summary style="color: blue;"><strong>Natural Resources, Fisheries & Farming</strong></summary>
+                        <p>
+                        McClellan backs fair, practical rules for the fishing industry, investment in working waterfronts, and protections for farmland. 
+                        He argues that environmental stewardship must be balanced with keeping coastal and agricultural economies viable for the next generation. 
+                        </p>
+                    </details>
+                    </li>
+                    <br>
+
+                    <li>
+                    <details>
+                        <summary style="color: blue;"><strong>Civic Education & Local Engagement</strong></summary>
+                        <p>
+                        A consistent theme for McClellan is reintroducing civics — including the basics of local government — into school curricula so 
+                        young people understand how counties, municipalities, and school boards work. Better informed citizens make stronger communities. 
+                        </p>
+                    </details>
+                    </li>
+                    <br>
+
+                    <li>
+                    <details>
+                        <summary style="color: blue;"><strong>Constituent Service & Community Presence</strong></summary>
+                        <p>
+                        Beyond legislation, McClellan highlights hands-on service — with legislative offices in Vineland and Cape May Court House — 
+                        helping residents with state agencies and casework. His background in the Cape May County Sheriff’s Office and 15 years coaching 
+                        girls’ basketball reflect an agenda rooted in everyday service and accessibility. 
+                        </p>
+                    </details>
+                    </li>
+                </ul>
+                </div>
+
+                <h4 class="sub-heading">Issues</h4>
+                <div class="experience can-sec">
+                <ul>
+                    <li>
+                    <details>
+                        <summary style="color: blue;"><strong>Executive Overreach & Tax Burdens</strong></summary>
+                        <p>
+                        McClellan argues the Governor’s recent budgets lean on fees and “sin taxes” that hit working-class residents while leaving South Jersey 
+                        under-served. He opposes piling on new taxes and regulations, calling instead for restraint, transparency, and prioritizing core services. 
+                        </p>
+                    </details>
+                    </li>
+                    <br>
+
+                    <li>
+                    <details>
+                        <summary style="color: blue;"><strong>Route 55 & Regional Infrastructure</strong></summary>
+                        <p>
+                        He calls the unfinished Route 55 a decades-long broken promise that affects safety, storm evacuation, and economic development. 
+                        Completing and hardening critical corridors — and fixing local roads and bridges — are baseline obligations the state owes LD1. 
+                        </p>
+                    </details>
+                    </li>
+                    <br>
+
+                    <li>
+                    <details>
+                        <summary style="color: blue;"><strong>Coastal Rules & Local Tax Base</strong></summary>
+                        <p>
+                        McClellan has raised alarms about proposed NJDEP changes to base flood elevations that could force costly home raisings across the 
+                        bayshore, hollow out municipal tax bases, and ignore on-the-ground realities in LD1. He supports practical coastal resilience that protects 
+                        people, property, and local budgets. 
+                        </p>
+                    </details>
+                    </li>
+                    <br>
+
+                    <li>
+                    <details>
+                        <summary style="color: blue;"><strong>Schools, Workforces & Keeping Talent Local</strong></summary>
+                        <p>
+                        He backs strong K-12 fundamentals, practical post-secondary pathways, and partnerships with institutions like community colleges to build 
+                        local careers — from trades and manufacturing to hospitality and marine industries — so LD1’s “best and brightest” can stay and thrive here. 
+                        </p>
+                    </details>
+                    </li>
+                    <br>
+
+                    <li>
+                    <details>
+                        <summary style="color: blue;"><strong>Public Safety & First Responders</strong></summary>
+                        <p>
+                        Drawing on his Sheriff’s Office experience, McClellan supports ensuring police, firefighters, EMTs, and corrections have resources, staffing, 
+                        and respect to keep towns safe, while maintaining accountability and community trust. 
+                        </p>
+                    </details>
+                    </li>
+                    <br>
+
+                    <li>
+                    <details>
+                        <summary style="color: blue;"><strong>Civics Education</strong></summary>
+                        <p>
+                        In your interview, McClellan explicitly supported making civics — including the roles of school boards, municipal officials, county offices, 
+                        and state/federal branches — part of mandatory curriculum so future voters can confidently navigate elections and public institutions. 
+                        </p>
+                    </details>
+                    </li>
+                    <br>
+
+                    <li>
+                    <details>
+                        <summary style="color: blue;"><strong>Voter Information & the Local Press</strong></summary>
+                        <p>
+                        McClellan is open to exploring county-facilitated, nonpartisan voter information (questionnaires, basic candidate pages) while noting the need 
+                        to consult county clerks on cost and implementation. He also supports rebuilding local press coverage — recalling past regional TV news — 
+                        so citizens can follow evolving issues beyond one-time questionnaires. 
+                        </p>
+                    </details>
+                    </li>
+                    <br>
+
+                    <li>
+                    <details>
+                        <summary style="color: blue;"><strong>Constituent Services & Accessibility</strong></summary>
+                        <p>
+                        He encourages residents to contact LD1’s legislative offices for help with state matters (e.g., MVC, unemployment) and coordinates with 
+                        federal offices as needed. McClellan stresses direct engagement over rumor mills and invites voters to reach out, ask questions, and get facts. 
+                        </p>
+                    </details>
+                    </li>
+                </ul>
+                </div>
             
             <h4 class="sub-heading">Candidates Forum Statements from 2023 (he was running for the same position)</h4>
             <div class="experience can-sec">
