mcclellan radio interview added

--- a/child_pages/cc-elections/Candidates/mcclellan.html
+++ b/child_pages/cc-elections/Candidates/mcclellan.html
@@ -343,18 +343,143 @@
 
     <br>
 
-    <div class="video-box-modal can-sec">
-        <h3 class="video-heading">InformTheVoteNJ Radio Hour Interview</h3>
+    <details>
+            <summary style="font-size: 2em; cursor:pointer; color:blue; text-decoration:underline;">Videos</summary>
 
-        <iframe src="https://www.youtube.com/embed/RSsZ_Ptp-jo?si=Bd-R3-0QWQMfRFwG" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>    </div>
+            <div class="video-box-modal can-sec">
+                <h3 class="video-heading">InformTheVoteNJ Radio Hour — Interview with Assemblyman Antwan McClellan (2025)</h3>
 
-    <br>
+                <iframe src="https://www.youtube.com/embed/RSsZ_Ptp-jo?si=Bd-R3-0QWQMfRFwG" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>    </div>
 
-    <div class="video-box-modal can-sec">
-        <h3 class="video-heading">Assembly GOP Video Biography</h3>
+                <br><br>
 
-        <iframe src="https://www.youtube.com/embed/ItquVZ9jd3w?si=SCZGSKkEAK9bWrpt" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-    </div>
+                <details>
+                    <summary style="text-align: center; font-weight: bold; font-size: 1.1em; cursor: pointer;">📋 Click here for full interview summary 📋</summary>
+                    <br><br>
+                    <div style="padding: 15px 25px; text-align: left;">
+                        <p>
+                            In this episode of the <em>InformTheVoteNJ</em> Radio Hour, host Steven Solof speaks with
+                            <strong>Assemblyman Antwan McClellan</strong>, who is running for re-election in New Jersey’s 1st Legislative District.
+                            They discuss McClellan’s background in public service and law enforcement, his perspective on Governor Murphy’s budget and
+                            taxation policies, the challenges of underinvestment in South Jersey, and the importance of reintroducing civics education.
+                            McClellan also shares thoughts on potential county-facilitated voter information resources and the need to rebuild local
+                            press coverage so voters can make informed decisions.
+                        </p>
+
+                        <h4>⭐ Key Takeaways</h4>
+                        <ul>
+                            <li><strong>Deep South Jersey Roots</strong> — McClellan and his running mates are born and raised in LD1; focus on elevating South Jersey’s needs.</li>
+                            <li><strong>Executive Overreach &amp; Tax Burdens</strong> — Cites new taxes (cigarettes, alcohol, gambling) as regressive and harmful to working families.</li>
+                            <li><strong>Infrastructure Neglect</strong> — Route 55 expansion called a decades-long broken promise; flags NJDEP flood-elevation rule impacts.</li>
+                            <li><strong>Reintroducing Civics Education</strong> — Supports mandatory civics/local government basics in schools.</li>
+                            <li><strong>County-Level Voter Information</strong> — Open to a nonpartisan info hub; notes cost/implementation concerns and need to consult clerks.</li>
+                            <li><strong>Rebuilding Local Press</strong> — Backs revitalizing local media; recalls stronger regional TV coverage in the past.</li>
+                            <li><strong>Community Service</strong> — Career in Cape May County Sheriff’s Office; 15 years coaching girls’ basketball.</li>
+                            <li><strong>Approachable &amp; Engaged</strong> — Urges constituents to reach out directly and visit legislative offices.</li>
+                        </ul>
+                    </div>
+                </details>
+
+                <br><br>
+
+                <details>
+                    <summary style="text-align: center; font-weight: bold; font-size: 1.1em; cursor: pointer;">⏳ Click to view timestamps, topics, and takeaways ⏳</summary>
+                    <div class="video-summary" style="margin-top: 1em;">
+                        <h2>Interview Summary – Antwan McClellan on InformTheVoteNJ Radio Hour</h2>
+                        <p>This table highlights the key topics covered in the interview, with major takeaways per section.</p>
+                        <table border="1" cellpadding="8" cellspacing="0" style="width: 100%; border-collapse: collapse;">
+                            <thead>
+                            <tr>
+                                <th style="text-align: left;">Timestamp</th>
+                                <th style="text-align: left;">Topic</th>
+                                <th style="text-align: left;">Key Takeaways</th>
+                            </tr>
+                            </thead>
+                            <tbody>
+                            <tr>
+                                <td>0:00–5:20</td>
+                                <td>Introduction</td>
+                                <td>Why civic information is hard to find; setup for a clarity-first conversation.</td>
+                            </tr>
+                            <tr>
+                                <td>5:21–8:00</td>
+                                <td>Conversation Goals</td>
+                                <td>No cross-examination; focus on clear positions and explanations.</td>
+                            </tr>
+                            <tr>
+                                <td>8:01–16:40</td>
+                                <td>Background &amp; Roots</td>
+                                <td>Personal background, law-enforcement career, community ties to LD1.</td>
+                            </tr>
+                            <tr>
+                                <td>16:41–24:00</td>
+                                <td>Life Outside Politics</td>
+                                <td>Coaching girls’ basketball; perceptions vs. realities of public life.</td>
+                            </tr>
+                            <tr>
+                                <td>24:01–26:30</td>
+                                <td>Civic Engagement</td>
+                                <td>Encourages direct engagement; highlights need for accessible information.</td>
+                            </tr>
+                            <tr>
+                                <td>26:31–30:30</td>
+                                <td>Campaign Messaging</td>
+                                <td>Fighting for South Jersey; support for local industries, schools, and small businesses.</td>
+                            </tr>
+                            <tr>
+                                <td>30:31–33:00</td>
+                                <td>Executive Overreach</td>
+                                <td>Defines concerns with budget/tax policy and impacts on working families.</td>
+                            </tr>
+                            <tr>
+                                <td>33:01–36:50</td>
+                                <td>North vs. South Priorities</td>
+                                <td>Effects of Trenton’s focus on North Jersey; resource disparities.</td>
+                            </tr>
+                            <tr>
+                                <td>36:51–40:50</td>
+                                <td>Infrastructure &amp; Rules</td>
+                                <td>Route 55 delays; NJDEP flood-elevation rule implications for homes and tax bases.</td>
+                            </tr>
+                            <tr>
+                                <td>40:51–44:40</td>
+                                <td>Civics in Schools</td>
+                                <td>Case for reintroducing civics/local government basics into curriculum.</td>
+                            </tr>
+                            <tr>
+                                <td>44:41–48:40</td>
+                                <td>County Info Hub</td>
+                                <td>Explores feasibility of a nonpartisan candidate-info portal; costs/ops considerations.</td>
+                            </tr>
+                            <tr>
+                                <td>48:41–50:30</td>
+                                <td>Local Press</td>
+                                <td>Value of revitalized local news; lessons from historic regional coverage.</td>
+                            </tr>
+                            <tr>
+                                <td>50:31–54:10</td>
+                                <td>Light Close</td>
+                                <td>Notes on Assemblyman Simonsen, music, and local events.</td>
+                            </tr>
+                            <tr>
+                                <td>54:11–55:44</td>
+                                <td>Closing</td>
+                                <td>Final remarks and reminders for voters.</td>
+                            </tr>
+                            </tbody>
+                        </table>
+                    </div>
+                </details>
+            </div>
+            
+            <br>
+
+            <div class="video-box-modal can-sec">
+                <h3 class="video-heading">Assembly GOP Video Biography</h3>
+
+                <iframe src="https://www.youtube.com/embed/ItquVZ9jd3w?si=SCZGSKkEAK9bWrpt" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            </div>
+    </details>
 
     <br>
             
