--- a/child_pages/cc-elections/Candidates/mcclellan.html
+++ b/child_pages/cc-elections/Candidates/mcclellan.html
@@ -349,7 +349,8 @@
             <div class="video-box-modal can-sec">
                 <h3 class="video-heading">InformTheVoteNJ Radio Hour — Interview with Assemblyman Antwan McClellan (2025)</h3>
 
-                <iframe src="https://www.youtube.com/embed/RSsZ_Ptp-jo?si=Bd-R3-0QWQMfRFwG" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>    </div>
+                <iframe src="https://www.youtube.com/embed/RSsZ_Ptp-jo?si=Bd-R3-0QWQMfRFwG" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>    
+            
 
                 <br><br>
 
