mcclellan quick summary update

--- a/child_pages/cc-elections/Candidates/mcclellan.html
+++ b/child_pages/cc-elections/Candidates/mcclellan.html
@@ -275,10 +275,19 @@
                 <summary style="color: blue;">
                     <strong>Quick Summary</strong>
                 </summary>
-                Antwan McClellan is a New Jersey Assemblyman representing the 1st Legislative District since 2020 and currently serves as the Assembly Minority Deputy Leader. A lifelong 
-                resident of Ocean City, McClellan has held local office on the City Council and Board of Education. He also serves in the Cape May County Sheriff's Department and is active 
-                in community organizations like the Ocean City Historical Museum and South Jersey Field of Dreams. His legislative focus includes public safety, economic justice, ballot 
-                design reform, and support for tourism and the arts.
+                Antwan McClellan is a New Jersey Assemblyman for the 1st Legislative District (since 2020) and serves as the Assembly Minority Deputy Leader. 
+                A lifelong Ocean City resident, he previously sat on the local Board of Education and City Council and has built a career at the Cape May 
+                County Sheriff’s Office as Confidential Assistant, Personnel Director, and Public Information Officer. He has also been active with the 
+                Ocean City Historical Museum, South Jersey Field of Dreams, and youth sports — coaching girls’ basketball for 15 years. These roles anchor 
+                his reputation as a hands-on public servant who blends legislative work with direct community involvement.
+                <br>
+                <br>
+                McClellan’s legislative agenda reflects a pro–South Jersey identity: resisting new fees and “sin-tax” hikes he calls executive overreach; 
+                pushing for fiscal discipline and taxpayer fairness; advancing long-delayed projects like Route 55; safeguarding coastal towns from 
+                one-size-fits-all regulations; and supporting small business, tourism, fisheries, and farmland. He is a vocal supporter of reintroducing 
+                civics into school curricula and open to exploring county-facilitated voter information hubs, while also calling for the revival of local 
+                press coverage so residents can follow evolving issues. With district offices in Vineland and Cape May Court House, he stresses accessibility, 
+                inviting constituents to reach out directly for help with state agencies rather than rely on social-media rumor mills.
             </details>
 
 
