--- a/child_pages/cc-elections/Candidates/simmons.html
+++ b/child_pages/cc-elections/Candidates/simmons.html
@@ -255,7 +255,7 @@
      <div class="candidate-pic-box">
          <img class="cover" src="../../../assets/candidates/simmons.jpg" class="candidate-pic">
          <div class="candidate-pic-box-content">
-             <h4 class="sub-heading">Websites</h4>
+             <h4 class="sub-heading" style="text-align: center;">Websites</h4>
              <div class="website">
                  
                  <a href="https://www.njleg.state.nj.us/legislative-roster/460/assemblywoman-simmons" target="_blank" rel="noopener noreferrer" class="website-link"><button class="candidate-ext-site">NJ Legislature Site</button></a>
@@ -266,7 +266,19 @@
 
              </div>
 
-             <button id="quick-summary-reopen" class="quick-sum">quick summary</button>
+             <!-- <button id="quick-summary-reopen" class="quick-sum">quick summary</button> -->
+              <details class="can-sec" id="quick-summary">
+                <summary style="color: blue;">
+                    <strong>Quick Summary</strong>
+                </summary>
+                Assemblywoman Heather Simmons brings over a decade of local government experience to the New Jersey General Assembly. She served four terms on the Gloucester County 
+                Board of Commissioners, where she focused on economic development, infrastructure, workforce programs, and public services. As Deputy Director of the Board, she 
+                launched a $15 million small business loan fund and led post-pandemic recovery efforts. Simmons holds degrees in international relations and public relations, and 
+                currently serves as Vice President of Workforce Innovation and Partnerships at Rowan College of South Jersey. In the Assembly, she has sponsored a wide array of 
+                legislation related to healthcare affordability, education, labor conditions, tax relief, and environmental protections.Capizola has been contacted multiple times 
+                with opportunities to share updated information but has yet to provide a substantive response. Voters seeking detailed and current insights into his positions may 
+                find it difficult to evaluate his candidacy without greater transparency.
+            </details>
 
              <div class="election-date">
                  <p>This election is on June 10th, 2025</p>
@@ -291,7 +303,26 @@
         <a href="../../../child_pages/cc-elections/transparency_standards_page.html" target="_blank" rel="noopener noreferrer" class="website-link"><button class="candidate-ext-site">Transparency Standards Explained</button></a>                 
 
         <img class="gauge" src="../../../assets/gauge_kinda_bad.svg" alt="">
-        <button id="rating-exp" class="rating-exp">anecdotal rating explanation</button>
+        <!-- <button id="rating-exp" class="rating-exp">anecdotal rating explanation</button> -->
+
+        <details class="can-sec" id="transparency-accessibility">
+            <summary style="color: blue;">
+                <strong>Explanation</strong>
+            </summary>
+            While Assemblywoman Simmons continues to bring a long legislative record and deep professional experience to the race, her campaign has not yet 
+            provided a clear, centralized avenue for voters to understand her priorities for the upcoming term. We are now well into the general election 
+            campaign season — with mail-in ballots already going out — and although we were able to attend an event where Simmons appeared, it was not 
+            structured around detailed campaign messaging. In addition, despite multiple attempts to connect (including public comment at a Gloucester 
+            County Commissioner meeting and direct follow-ups with her campaign team), we have not received a response to our questionnaire nor links to 
+            any comprehensive campaign materials.
+            <br>
+            <br>
+            Given the visibility of her past legislative work, her transparency/accessibility rating remains above a default “Low,” but at this point cannot 
+            be moved higher without direct, substantive communication from her campaign. A clear, public platform or direct response to our outreach effort 
+            would allow everyday voters to evaluate her goals and values without doing extensive independent research. We continue to invite Assemblywoman 
+            Simmons and her running mate to take advantage of this opportunity to share their agenda with the public.
+        </details>
+
     </div> 
             
      <div class="candidate-agenda">
